--- a/Clase 11 - Segunda Entrega del Proyecto Final/styles.css
+++ b/Clase 11 - Segunda Entrega del Proyecto Final/styles.css
@@ -1,3 +1,8 @@
+#containerTitulo {
+    align-content: center;
+    text-align: center;
+}
+
 header {
     background: rgba(0,0,0,0.7);
     width: 100%;
